Adding jdbc properties for time zone to work with newer versions of mysql

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,7 +1,7 @@
 ##### MySQL
 ################### DataSource Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/registration_02?createDatabaseIfNotExist=true
+jdbc.url=jdbc:mysql://localhost:3306/registration_02?createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=EST
 jdbc.user=tutorialuser
 jdbc.pass=tutorialmy5ql
 init-db=false
